@@ -28,6 +28,6 @@ public class GlowColorCache {
     }
 
     private static int clamp(int value) {
-        return Math.max(0, Math.min(255, value));
+        return Math.clamp(value, 0, 255);
     }
 }
